ASN_MODULE_SRCS=	\
	M3AP_M3AP-PDU.c	\
	M3AP_InitiatingMessage.c	\
	M3AP_SuccessfulOutcome.c	\
	M3AP_UnsuccessfulOutcome.c	\
	M3AP_MBMSSessionStartRequest.c	\
	M3AP_MBMSSessionStartResponse.c	\
	M3AP_MBMSSessionStartFailure.c	\
	M3AP_MBMSSessionStopRequest.c	\
	M3AP_MBMSSessionStopResponse.c	\
	M3AP_MBMSSessionUpdateRequest.c	\
	M3AP_MBMSSessionUpdateResponse.c	\
	M3AP_MBMSSessionUpdateFailure.c	\
	M3AP_ErrorIndication.c	\
	M3AP_Reset.c	\
	M3AP_ResetType.c	\
	M3AP_ResetAll.c	\
	M3AP_MBMS-Service-associatedLogicalM3-ConnectionListRes.c	\
	M3AP_ResetAcknowledge.c	\
	M3AP_MBMS-Service-associatedLogicalM3-ConnectionListResAck.c	\
	M3AP_PrivateMessage.c	\
	M3AP_M3SetupRequest.c	\
	M3AP_MBMSServiceAreaListItem.c	\
	M3AP_M3SetupResponse.c	\
	M3AP_M3SetupFailure.c	\
	M3AP_MCEConfigurationUpdate.c	\
	M3AP_MCEConfigurationUpdateAcknowledge.c	\
	M3AP_MCEConfigurationUpdateFailure.c	\
	M3AP_Absolute-Time-ofMBMS-Data.c	\
	M3AP_AllocationAndRetentionPriority.c	\
	M3AP_BitRate.c	\
	M3AP_Cause.c	\
	M3AP_CauseMisc.c	\
	M3AP_CauseNAS.c	\
	M3AP_CauseProtocol.c	\
	M3AP_CauseRadioNetwork.c	\
	M3AP_CauseTransport.c	\
	M3AP_CriticalityDiagnostics.c	\
	M3AP_CriticalityDiagnostics-IE-List.c	\
	M3AP_ECGI.c	\
	M3AP_EUTRANCellIdentifier.c	\
	M3AP_ExtendedMCE-ID.c	\
	M3AP_Global-MCE-ID.c	\
	M3AP_GBR-QosInformation.c	\
	M3AP_GTP-TEID.c	\
	M3AP_IPAddress.c	\
	M3AP_MBMS-Cell-List.c	\
	M3AP_MBMS-E-RAB-QoS-Parameters.c	\
	M3AP_MBMS-Service-associatedLogicalM3-ConnectionItem.c	\
	M3AP_MBMSServiceArea1.c	\
	M3AP_MBMS-Service-Area.c	\
	M3AP_MBMS-Session-Duration.c	\
	M3AP_MBMS-Session-ID.c	\
	M3AP_MCE-MBMS-M3AP-ID.c	\
	M3AP_MCE-ID.c	\
	M3AP_MCEname.c	\
	M3AP_MinimumTimeToMBMSDataTransfer.c	\
	M3AP_MME-MBMS-M3AP-ID.c	\
	M3AP_Pre-emptionCapability.c	\
	M3AP_Pre-emptionVulnerability.c	\
	M3AP_PriorityLevel.c	\
	M3AP_PLMN-Identity.c	\
	M3AP_QCI.c	\
	M3AP_Reestablishment.c	\
	M3AP_TimeToWait.c	\
	M3AP_TMGI.c	\
	M3AP_TNL-Information.c	\
	M3AP_TypeOfError.c	\
	M3AP_Criticality.c	\
	M3AP_Presence.c	\
	M3AP_PrivateIE-ID.c	\
	M3AP_ProcedureCode.c	\
	M3AP_ProtocolIE-ID.c	\
	M3AP_TriggeringMessage.c	\
	M3AP_ProtocolIE-Container.c	\
	M3AP_ProtocolIE-Single-Container.c	\
	M3AP_ProtocolIE-Field.c	\
	M3AP_ProtocolIE-ContainerPair.c	\
	M3AP_ProtocolIE-FieldPair.c	\
	M3AP_ProtocolIE-ContainerList.c	\
	M3AP_ProtocolIE-ContainerPairList.c	\
	M3AP_ProtocolExtensionContainer.c	\
	M3AP_ProtocolExtensionField.c	\
	M3AP_PrivateIE-Container.c	\
	M3AP_PrivateIE-Field.c

ASN_MODULE_HDRS=	\
	M3AP_M3AP-PDU.h	\
	M3AP_InitiatingMessage.h	\
	M3AP_SuccessfulOutcome.h	\
	M3AP_UnsuccessfulOutcome.h	\
	M3AP_MBMSSessionStartRequest.h	\
	M3AP_MBMSSessionStartResponse.h	\
	M3AP_MBMSSessionStartFailure.h	\
	M3AP_MBMSSessionStopRequest.h	\
	M3AP_MBMSSessionStopResponse.h	\
	M3AP_MBMSSessionUpdateRequest.h	\
	M3AP_MBMSSessionUpdateResponse.h	\
	M3AP_MBMSSessionUpdateFailure.h	\
	M3AP_ErrorIndication.h	\
	M3AP_Reset.h	\
	M3AP_ResetType.h	\
	M3AP_ResetAll.h	\
	M3AP_MBMS-Service-associatedLogicalM3-ConnectionListRes.h	\
	M3AP_ResetAcknowledge.h	\
	M3AP_MBMS-Service-associatedLogicalM3-ConnectionListResAck.h	\
	M3AP_PrivateMessage.h	\
	M3AP_M3SetupRequest.h	\
	M3AP_MBMSServiceAreaListItem.h	\
	M3AP_M3SetupResponse.h	\
	M3AP_M3SetupFailure.h	\
	M3AP_MCEConfigurationUpdate.h	\
	M3AP_MCEConfigurationUpdateAcknowledge.h	\
	M3AP_MCEConfigurationUpdateFailure.h	\
	M3AP_Absolute-Time-ofMBMS-Data.h	\
	M3AP_AllocationAndRetentionPriority.h	\
	M3AP_BitRate.h	\
	M3AP_Cause.h	\
	M3AP_CauseMisc.h	\
	M3AP_CauseNAS.h	\
	M3AP_CauseProtocol.h	\
	M3AP_CauseRadioNetwork.h	\
	M3AP_CauseTransport.h	\
	M3AP_CriticalityDiagnostics.h	\
	M3AP_CriticalityDiagnostics-IE-List.h	\
	M3AP_ECGI.h	\
	M3AP_EUTRANCellIdentifier.h	\
	M3AP_ExtendedMCE-ID.h	\
	M3AP_Global-MCE-ID.h	\
	M3AP_GBR-QosInformation.h	\
	M3AP_GTP-TEID.h	\
	M3AP_IPAddress.h	\
	M3AP_MBMS-Cell-List.h	\
	M3AP_MBMS-E-RAB-QoS-Parameters.h	\
	M3AP_MBMS-Service-associatedLogicalM3-ConnectionItem.h	\
	M3AP_MBMSServiceArea1.h	\
	M3AP_MBMS-Service-Area.h	\
	M3AP_MBMS-Session-Duration.h	\
	M3AP_MBMS-Session-ID.h	\
	M3AP_MCE-MBMS-M3AP-ID.h	\
	M3AP_MCE-ID.h	\
	M3AP_MCEname.h	\
	M3AP_MinimumTimeToMBMSDataTransfer.h	\
	M3AP_MME-MBMS-M3AP-ID.h	\
	M3AP_Pre-emptionCapability.h	\
	M3AP_Pre-emptionVulnerability.h	\
	M3AP_PriorityLevel.h	\
	M3AP_PLMN-Identity.h	\
	M3AP_QCI.h	\
	M3AP_Reestablishment.h	\
	M3AP_TimeToWait.h	\
	M3AP_TMGI.h	\
	M3AP_TNL-Information.h	\
	M3AP_TypeOfError.h	\
	M3AP_Criticality.h	\
	M3AP_Presence.h	\
	M3AP_PrivateIE-ID.h	\
	M3AP_ProcedureCode.h	\
	M3AP_ProtocolIE-ID.h	\
	M3AP_TriggeringMessage.h	\
	M3AP_ProtocolIE-Container.h	\
	M3AP_ProtocolIE-Single-Container.h	\
	M3AP_ProtocolIE-Field.h	\
	M3AP_ProtocolIE-ContainerPair.h	\
	M3AP_ProtocolIE-FieldPair.h	\
	M3AP_ProtocolIE-ContainerList.h	\
	M3AP_ProtocolIE-ContainerPairList.h	\
	M3AP_ProtocolExtensionContainer.h	\
	M3AP_ProtocolExtensionField.h	\
	M3AP_PrivateIE-Container.h	\
	M3AP_PrivateIE-Field.h

ASN_MODULE_HDRS+=ANY.h
ASN_MODULE_SRCS+=ANY.c
ASN_MODULE_HDRS+=OCTET_STRING.h
ASN_MODULE_HDRS+=OPEN_TYPE.h
ASN_MODULE_SRCS+=OPEN_TYPE.c
ASN_MODULE_HDRS+=constr_CHOICE.h
ASN_MODULE_HDRS+=INTEGER.h
ASN_MODULE_SRCS+=INTEGER.c
ASN_MODULE_HDRS+=NativeEnumerated.h
ASN_MODULE_SRCS+=NativeEnumerated.c
ASN_MODULE_HDRS+=NativeInteger.h
ASN_MODULE_SRCS+=NativeInteger.c
ASN_MODULE_HDRS+=OBJECT_IDENTIFIER.h
ASN_MODULE_SRCS+=OBJECT_IDENTIFIER.c
ASN_MODULE_HDRS+=PrintableString.h
ASN_MODULE_SRCS+=PrintableString.c
ASN_MODULE_HDRS+=asn_SEQUENCE_OF.h
ASN_MODULE_SRCS+=asn_SEQUENCE_OF.c
ASN_MODULE_HDRS+=asn_SET_OF.h
ASN_MODULE_SRCS+=asn_SET_OF.c
ASN_MODULE_SRCS+=constr_CHOICE.c
ASN_MODULE_HDRS+=constr_SEQUENCE.h
ASN_MODULE_SRCS+=constr_SEQUENCE.c
ASN_MODULE_HDRS+=constr_SEQUENCE_OF.h
ASN_MODULE_SRCS+=constr_SEQUENCE_OF.c
ASN_MODULE_HDRS+=constr_SET_OF.h
ASN_MODULE_SRCS+=constr_SET_OF.c
ASN_MODULE_HDRS+=asn_application.h
ASN_MODULE_SRCS+=asn_application.c
ASN_MODULE_HDRS+=asn_ioc.h
ASN_MODULE_HDRS+=asn_system.h
ASN_MODULE_HDRS+=asn_codecs.h
ASN_MODULE_HDRS+=asn_internal.h
ASN_MODULE_SRCS+=asn_internal.c
ASN_MODULE_HDRS+=asn_random_fill.h
ASN_MODULE_SRCS+=asn_random_fill.c
ASN_MODULE_HDRS+=asn_bit_data.h
ASN_MODULE_SRCS+=asn_bit_data.c
ASN_MODULE_SRCS+=OCTET_STRING.c
ASN_MODULE_HDRS+=BIT_STRING.h
ASN_MODULE_SRCS+=BIT_STRING.c
ASN_MODULE_SRCS+=asn_codecs_prim.c
ASN_MODULE_HDRS+=asn_codecs_prim.h
ASN_MODULE_HDRS+=ber_tlv_length.h
ASN_MODULE_SRCS+=ber_tlv_length.c
ASN_MODULE_HDRS+=ber_tlv_tag.h
ASN_MODULE_SRCS+=ber_tlv_tag.c
ASN_MODULE_HDRS+=ber_decoder.h
ASN_MODULE_SRCS+=ber_decoder.c
ASN_MODULE_HDRS+=der_encoder.h
ASN_MODULE_SRCS+=der_encoder.c
ASN_MODULE_HDRS+=constr_TYPE.h
ASN_MODULE_SRCS+=constr_TYPE.c
ASN_MODULE_HDRS+=constraints.h
ASN_MODULE_SRCS+=constraints.c
ASN_MODULE_HDRS+=xer_support.h
ASN_MODULE_SRCS+=xer_support.c
ASN_MODULE_HDRS+=xer_decoder.h
ASN_MODULE_SRCS+=xer_decoder.c
ASN_MODULE_HDRS+=xer_encoder.h
ASN_MODULE_SRCS+=xer_encoder.c
ASN_MODULE_HDRS+=per_support.h
ASN_MODULE_SRCS+=per_support.c
ASN_MODULE_HDRS+=per_decoder.h
ASN_MODULE_SRCS+=per_decoder.c
ASN_MODULE_HDRS+=per_encoder.h
ASN_MODULE_SRCS+=per_encoder.c
ASN_MODULE_HDRS+=per_opentype.h
ASN_MODULE_SRCS+=per_opentype.c
ASN_MODULE_HDRS+=oer_decoder.h
ASN_MODULE_HDRS+=oer_encoder.h
ASN_MODULE_HDRS+=oer_support.h
ASN_MODULE_SRCS+=oer_decoder.c
ASN_MODULE_SRCS+=oer_encoder.c
ASN_MODULE_SRCS+=oer_support.c
ASN_MODULE_SRCS+=OPEN_TYPE_oer.c
ASN_MODULE_SRCS+=INTEGER_oer.c
ASN_MODULE_SRCS+=BIT_STRING_oer.c
ASN_MODULE_SRCS+=OCTET_STRING_oer.c
ASN_MODULE_SRCS+=NativeInteger_oer.c
ASN_MODULE_SRCS+=NativeEnumerated_oer.c
ASN_MODULE_SRCS+=constr_CHOICE_oer.c
ASN_MODULE_SRCS+=constr_SEQUENCE_oer.c
ASN_MODULE_SRCS+=constr_SET_OF_oer.c

ASN_MODULE_CFLAGS=

pkglib_LTLIBRARIES=libm3apasn1c.la
libm3apasn1c_la_SOURCES=$(ASN_MODULE_SRCS) $(ASN_MODULE_HDRS)

libm3apasn1c_la_DEPENDENCIES = \
    $(top_srcdir)/lib/core/src/libcore.la \
	$(NULL)

libm3apasn1c_la_LIBADD = \
    $(top_srcdir)/lib/core/src/libcore.la \
	$(NULL)

AM_LDFLAGS = \
	-version-info @LIBVERSION@ \
	$(NULL)

AM_CPPFLAGS = \
    -I$(top_srcdir)/lib/core/include \
	$(NULL)

AM_CFLAGS = \
	${ASN_MODULE_CFLAGS} \
	-Wno-parentheses-equality -Wno-overflow -Wno-format \
	$(NULL)

MAINTAINERCLEANFILES = Makefile.in 
MOSTLYCLEANFILES = core *.stackdump









